--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Document</title>
 </head>
 
-<body>
+
     <main>
         <section class="start">
             <div class="container1">
                 <div class="championsCoins">
-                    <img src="./img/CHAMPIONS_LEAGUE__1___1_-removebg.png" alt="" />
+                    <img src="./img/champions-coins-logo.png" alt="" />
                 </div>
 
                 <div class="ronaldo">
@@ -30,20 +30,20 @@
                     <a class="linkWsp" href="">
                         <strong>WHATSAPP</strong>
                         <img src="./img/wsplogo-removebg.png" alt="" class="wspImgWhite" />
-                        <img src="./img/wsp-green-logo (1).png" alt="" class="wspImgGreen" />
+                        <img src="./img/wsp-green.png" alt="" class="wspImgGreen" />
                     </a>
                 </div>
-
+                
                 <div class="ig">
                     <a class="linkIg" href="">
                         <strong>INSTAGRAM</strong>
-                        <img src="./img/insta.png" alt="" class="igImg" />
+                        <img src="./img/ig-logo-white-removebg-preview.png" alt="" class="igImg" />
                         <img src="./img/ig-logo-white-removebg-preview.png" alt="" class="igImg2" />
                     </a>
                 </div>
             </div>
         </section>
-
+        <div class="space"></div>
         <section class="row">
             <!--1-->
             <div class="gridContainer3">
@@ -110,6 +110,12 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div>
+            <img src="./img/mercado-pago.png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
