--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="gridContainer3">
                 <h2>ARGENTINA</h2>
             </div>
-            <div class="gridContainer1">
+            <a href="://placekitten.com/966/255" class="gridContainer1">
                 <div class="gridImg3">
                     <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
                 </div>
@@ -75,13 +75,13 @@
                 <div class="gridContainer2">
                     <h3>$400</h3>
                 </div>
-            </div>
+            </a>
 
             <!--2-->
             <div class="gridContainer3 world">
                 <h2 class="worldH2">WORLD</h2>
             </div>
-            <div class="gridContainer1">
+            <a href="://placekitten.com/966/255" class="gridContainer1 worldGrid">
                 <div class="gridImg3">
                     <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
                 </div>
@@ -107,13 +107,16 @@
                 <div class="gridContainer2">
                     <h3>$400</h3>
                 </div>
-            </div>
+            </a>
         </section>
     </main>
 
     <footer>
         <div>
             <img src="./img/mercado-pago.png" alt="">
+            <img src="./img/zelle-logo.png" alt="">
+            <img src="./img/paypal.png" alt="">
+            <img src="./img/tether-logo.jpg" alt="">
         </div>
     </footer>
 </body>
