--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 </div>
 
                 <div class="ronaldo">
-                    <img src="./img/ronaldo-champions.png" alt="" />
+                    <img src="./img/ronaldo-champions-2.png" alt="" />
                 </div>
                 <div class="messi">
-                    <img src="./img/messi-removebg-3.png" alt="" />
+                    <img src="./img/messi-removebg-4.png" alt="" />
                 </div>
 
                 <div class="wsp">
