--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,43 +6,42 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@500&display=swap"
         rel="stylesheet" />
-
-    <title>Document</title>
+    <title>Champions Coins</title>
 </head>
 
-
+<body>
     <main>
         <section class="start">
             <div class="container1">
                 <div class="championsCoins">
-                    <img src="./img/champions-coins-logo.png" alt="" />
+                    <img src="./img/champions-coins-logo.png" alt="Logo de Champions Coins" />
                 </div>
 
                 <div class="ronaldo">
-                    <img src="./img/ronaldo-champions-2.png" alt="" />
+                    <img src="./img/ronaldo-champions-2.png" alt="Imagen de Cristiano Ronaldo con la Champions League" />
                 </div>
                 <div class="messi">
-                    <img src="./img/messi-removebg-4.png" alt="" />
+                    <img src="./img/messi-removebg-4.png" alt="Imagen de Lionel Messi con la Champions League" />
                 </div>
 
                 <div class="wsp">
                     <a class="linkWsp" href="">
                         <strong>WHATSAPP</strong>
-                        <img src="./img/wsplogo-removebg.png" alt="" class="wspImgWhite" />
-                        <img src="./img/wsp-green.png" alt="" class="wspImgGreen" />
+                        <img src="./img/wsplogo-removebg.png" alt="Logo de Whatsapp en blanco" class="wspImgWhite" />
+                        <img src="./img/wsp-green.png" alt="Logo de Whatsapp en verde" class="wspImgGreen" />
                     </a>
                 </div>
                 
                 <div class="ig">
                     <a class="linkIg" href="">
                         <strong>INSTAGRAM</strong>
-                        <img src="./img/ig-logo-white-removebg-preview.png" alt="" class="igImg" />
-                        <img src="./img/ig-logo-white-removebg-preview.png" alt="" class="igImg2" />
+                        <img src="./img/ig-logo-white-removebg-preview.png" alt="Logo de Instagram en blanco" class="igImg" />
+                        <img src="./img/ig-logo-white-removebg-preview.png" alt="Logo de Instagram en blanco" class="igImg2" />
                     </a>
                 </div>
             </div>
         </section>
-        <div class="space"></div>
+
         <section class="row">
             <!--1-->
             <div class="gridContainer3">
@@ -51,16 +49,16 @@
             </div>
             <a href="://placekitten.com/966/255" class="gridContainer1">
                 <div class="gridImg3">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 100000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 250000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 500000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg3">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 1000000 de monedas de Ea Sports Fc 24" />
                 </div>
 
                 <div class="gridContainer2">
@@ -83,16 +81,16 @@
             </div>
             <a href="://placekitten.com/966/255" class="gridContainer1 worldGrid">
                 <div class="gridImg3">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 100000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 250000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 500000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg3">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="" />
+                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 1000000 de monedas de Ea Sports Fc 24" />
                 </div>
 
                 <div class="gridContainer2">
@@ -113,10 +111,10 @@
 
     <footer>
         <div>
-            <img src="./img/mercado-pago.png" alt="">
-            <img src="./img/zelle-logo.png" alt="">
-            <img src="./img/paypal.png" alt="">
-            <img src="./img/tether-logo.jpg" alt="">
+            <img src="./img/mercado-pago.png" alt="Logo de Mercado Pago">
+            <img src="./img/zelle-logo.png" alt="Logo de Zelle">
+            <img src="./img/paypal.png" alt="Logo de Paypal">
+            <img src="./img/tether-logo.jpg" alt="Logo de Tether">
         </div>
     </footer>
 </body>
