--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <h1>CHAMPIONS COINS</h1>
+            <img src="./img/champions-coins-logo.png" alt="Logo de Champions Coins pequeño">
+        </div>
+    </header>
     <main>
         <section class="start">
             <div class="container1">
@@ -52,13 +58,13 @@
                     <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 100000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 250000 de monedas de Ea Sports Fc 24" />
+                    <img src="./img/fifa-coins-250k.jpg" class="fifaCoins" alt="Imagen de 250000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 500000 de monedas de Ea Sports Fc 24" />
+                    <img src="./img/fifa-coins-500k.jpg" class="fifaCoins" alt="Imagen de 500000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg3">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 1000000 de monedas de Ea Sports Fc 24" />
+                    <img src="./img/fifa-coins-1m.jpg" class="fifaCoins" alt="Imagen de 1000000 de monedas de Ea Sports Fc 24" />
                 </div>
 
                 <div class="gridContainer2">
@@ -84,13 +90,13 @@
                     <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 100000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 250000 de monedas de Ea Sports Fc 24" />
+                    <img src="./img/fifa-coins-250k.jpg" class="fifaCoins" alt="Imagen de 250000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg4">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 500000 de monedas de Ea Sports Fc 24" />
+                    <img src="./img/fifa-coins-500k.jpg" class="fifaCoins" alt="Imagen de 500000 de monedas de Ea Sports Fc 24" />
                 </div>
                 <div class="gridImg3">
-                    <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Imagen de 1000000 de monedas de Ea Sports Fc 24" />
+                    <img src="./img/fifa-coins-1m.jpg" class="fifaCoins" alt="Imagen de 1000000 de monedas de Ea Sports Fc 24" />
                 </div>
 
                 <div class="gridContainer2">
