--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div class="ig">
-                    <a class="linkIg" href="">
+                    <a class="linkIg" href="https://www.instagram.com/champions__coins/">
                         <strong>INSTAGRAM</strong>
                         <img src="./img/ig-logo-white-removebg-preview.png" alt="Logo de Instagram en blanco" class="igImg" />
                         <img src="./img/ig-logo-white-removebg-preview.png" alt="Logo de Instagram en blanco" class="igImg2" />
@@ -126,3 +126,8 @@
 </body>
 
 </html>
+<script>
+    document.querySelector(".linkIg").addEventListener("click", function() {
+        window.open("https://www.instagram.com/champions__coins/", "_blank");
+    });
+</script>
