--- a/index.html
+++ b/index.html
@@ -123,11 +123,14 @@
             <img src="./img/tether-logo.jpg" alt="Logo de Tether">
         </div>
     </footer>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        document.querySelector(".linkIg").addEventListener("click", function() {
+            window.open("https://www.instagram.com/champions__coins/", "_blank");
+            });
+        });
+    </script>
 </body>
 
 </html>
-<script>
-    document.querySelector(".linkIg").addEventListener("click", function() {
-        window.open("https://www.instagram.com/champions__coins/", "_blank");
-    });
-</script>
