--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--<link rel="stylesheet" href="./css/styles.css" />-->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <meta name="description" content="Buy EA FC24 coins at the best price and fast with Champions Coins, safety service guaranteed. Visit our website today to learn more!">
+    <meta name="description-es" content="Compra monedas de EA SPORTS FC 24 de forma segura y rápida con Champions Coins. Obtén las mejores cartas y jugadores para tu equipo de Ultimate Team.">
+    <meta name="lang" content="en">
+    <meta name="lang-es" content="es">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!--<link rel="stylesheet" href="./css/estilos.css">-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@500&display=swap"
         rel="stylesheet" />
     <title>Champions Coins</title>
