instagram-link-desktop

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <img src="./img/wsp-green.png" alt="Green Whatsapp logo" class="wspImgGreen" />
                     </a>
                 </div>
-                
+
                 <div class="ig">
-                    <a class="linkIg" href="https://www.instagram.com/champions__coins/" alt="Instagram access link">
+                    <a class="linkIg" href="https://www.instagram.com/champions__coins/"  target="_blank" alt="Instagram access link" >
                         <strong>INSTAGRAM</strong>
                         <img src="./img/ig-logo-white-removebg-preview.webp" alt="White Instagram logo" class="igImg" />
                         <img src="./img/ig-logo-white-removebg-preview.webp" alt="White Instagram logo" class="igImg2" />
@@ -147,13 +147,6 @@
         <p>2024 © Champions Coins. All rights reserved</p>
     </footer>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        document.querySelector(".linkIg").addEventListener("click", function() {
-            window.open("https://www.instagram.com/champions__coins/", "_blank");
-            });
-        });
-    </script>
 </body>
 
 </html>
