--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
             wspElement.addEventListener('click',openWhatsApp);
         } 
         else {
-            wspInverted.addEventListener('click', openWhatsApp);
-            igInverted.addEventListener('click', openInstagram);        
+            igElement.addEventListener('click', openInstagram);
+            wspElement.addEventListener('click',openWhatsApp);
         }
     </script>
 
