--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
         }
 
         function openWhatsApp() {
+            //mi numero
+            mi_num = +541121850804
             // Enlace para redirigir a la página de WhatsApp
-            var whatsappUrl = 'https://api.whatsapp.com/';
+            var whatsappUrl = 'https://wa.me/' + mi_num;
 
             // Abrir la ventana de WhatsApp en una nueva pestaña
             window.open(whatsappUrl, '_blank');
