--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 
                 <div class="wsp" id="whatsapp">
-                    <a class="linkWsp" target="_blank" alt="Whatsapp access link">
+                    <a class="linkWsp" href="https://wa.me/+541121850804" target="_blank" alt="Whatsapp access link">
                         <strong>WHATSAPP</strong>
                         <img src="./img/wsplogo-removebg.webp" alt="White Whatsapp logo" class="wspImgWhite" />
                         <img src="./img/wsp-green.png" alt="Green Whatsapp logo" class="wspImgGreen" />
@@ -53,11 +53,11 @@
                 </div>
 
                 <div class="ig" id="instagram">
-                    <a class="linkIg"  target="_blank" alt="Instagram access link" >
+                    <a class="linkIg"  href="https://www.instagram.com/champions__coins/" target="_blank" alt="Instagram access link" >
                         <strong>INSTAGRAM</strong>
                         <img src="./img/ig-logo-white-removebg-preview.webp" alt="White Instagram logo" class="igImg" />
                         <img src="./img/ig-logo-white-removebg-preview.webp" alt="White Instagram logo" class="igImg2" />
-                    <a>
+                    </a>
                 </div>
             </div>
         </section>
@@ -65,7 +65,7 @@
         <section class="platforms">
             <img src="./img/ps4-5.webp" alt="Playstation and Xbox platform's logo " class="ps" alt="Playstation and Xbox respective logos">
             <img src="./img/xbox.webp" alt="Xbox logo" class="xbox">
-            <img src="./img/pc.png" alt="PC logo" class="pc">
+            <img src="./img/pc-removebg.png" alt="PC logo" class="pc">
         </section>
 
         <section class="row">
@@ -73,7 +73,7 @@
             <div class="gridContainer3">
                 <h2>EUROS</h2>
             </div>
-            <a href="://placekitten.com/966/255" class="gridContainer1" alt="Second Instagram link access">
+            <a href="https://www.instagram.com/champions__coins/" class="gridContainer1" alt="Second Instagram link access">
                 <div class="gridImg3">
                     <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Image of 100000 EA Sports Fc 24 coins" />
                 </div>
@@ -105,7 +105,7 @@
             <div class="gridContainer3 world">
                 <h2 class="worldH2">DOLLARS</h2>
             </div>
-            <a href="://placekitten.com/966/255" class="gridContainer1 worldGrid">
+            <a href="https://wa.me/+541121850804" class="gridContainer1 worldGrid">
                 <div class="gridImg3">
                     <img src="./img/fifacoins100k.jpg" class="fifaCoins" alt="Image of 100000 EA Sports Fc 24 coins" />
                 </div>
